<resources>
    <string name="app_name">Trade-Coach</string>
    <string name="register">Register</string>
    <string name="login">Already have an account? <b>Login!</b></string>
    <string name="log">LOGIN</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="email_address">Email address</string>
    <string name="next">next</string>
    <string name="get_started">Get Started</string>
    <string name="community">Community</string>
    <string name="currencies">Currencies</string>
    <string name="dedication">Dedication</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="create_post">Create Post</string>
    <string name="reset_password">Reset Password</string>
</resources>