<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradiant_background"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/white_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.45">
        <ImageView
            android:id="@+id/image_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            android:src="@drawable/button"/>
        <TextView
            android:id="@+id/registerTVbottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/image_button"
            app:layout_constraintEnd_toEndOf="@id/image_button"
            app:layout_constraintTop_toTopOf="@id/image_button"
            app:layout_constraintBottom_toBottomOf="@id/image_button"
            android:textColor="@color/white"
            android:text="@string/login"
            android:paddingTop="7dp"
            android:textAlignment="center"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_button"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:fontFamily="@font/interregular"
            android:id="@+id/registerbotTV"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="110dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_button"
            android:text="forgot password"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:fontFamily="@font/interregular"
            android:id="@+id/forgotpasswordTV"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/emailadressET"
            android:textAlignment="center"
            android:textSize="24sp"
            android:fontFamily="@font/intermedium"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/registerTV"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:paddingStart="10dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/silver"
            android:layout_marginEnd="25dp"
            android:textCursorDrawable="@drawable/cursor_drawbale"
            app:layout_constraintBottom_toTopOf="@id/passwordET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/emailadressET"/>


        <EditText
            android:paddingStart="10dp"
            android:textCursorDrawable="@drawable/cursor_drawbale"
            android:layout_marginStart="25dp"
            android:textColor="@color/white"
            android:layout_marginEnd="25dp"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/silver"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@id/image_button"
            android:id="@+id/passwordET"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/login"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@id/white_container"/>

</androidx.constraintlayout.widget.ConstraintLayout>