<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradiant_background"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/white_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.6">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/usernameET"
            android:textColor="@color/white"
            android:text="@string/register"
            android:textSize="25sp"
            android:fontFamily="@font/intermedium"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>
        <ImageView
            android:id="@+id/image_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            android:src="@drawable/button"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/image_button"
            app:layout_constraintEnd_toEndOf="@id/image_button"
            app:layout_constraintTop_toTopOf="@id/image_button"
            app:layout_constraintBottom_toBottomOf="@id/image_button"
            android:textColor="@color/white"
            android:text="@string/register"
            android:paddingTop="7dp"
            android:textAlignment="center"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:fontFamily="@font/interregular"
            android:id="@+id/loginTV"
            android:layout_marginTop="10dp"/>

        <EditText
            android:textColorHint="@color/silver"
            android:hint="Username"

            android:layout_marginBottom="20dp"
            android:id="@+id/usernameET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@id/emailET"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_outline"
            android:paddingStart="10dp"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_drawbale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="44dp" />

        <EditText
            android:textColorHint="@color/silver"
            android:hint="@string/email"
            android:paddingStart="10dp"

            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textCursorDrawable="@drawable/cursor_drawbale"
            app:layout_constraintBottom_toTopOf="@id/passwordET"
            android:layout_width="0dp"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:id="@+id/emailET"/>

        <EditText
            android:textColorHint="@color/silver"
            android:hint="Password"
            android:id="@+id/passwordET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toTopOf="@id/countryET"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_outline"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_drawbale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="211dp" />

        <EditText
            android:id="@+id/countryET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toTopOf="@+id/image_button"
            android:background="@drawable/edit_text_outline"
            android:enabled="false"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="295dp" />
        <com.hbb20.CountryCodePicker
            android:id="@+id/countyCodePicker"
            android:layout_width="0dp"
            app:ccpDialog_textColor="@color/white"

            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/countryET"
            app:layout_constraintTop_toTopOf="@id/countryET"
            app:layout_constraintBottom_toBottomOf="@id/countryET"
            app:layout_constraintEnd_toEndOf="@id/countryET"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       android:src="@drawable/register"
        app:layout_constraintBottom_toTopOf="@id/white_container"/>

</androidx.constraintlayout.widget.ConstraintLayout>